# Projects

./: ReadingTracker.sln
ReadingTracker/: ReadingTracker.cpp  ReadingTracker.rc  ReadingTracker.vcxproj  ReadingTracker.vcxproj.filters  Resource.h
ReadingTrackerApp/: ReadingTrackerApp.sln
ReadingTrackerApp/ReadingTrackerApp/: ReadingTrackerApp.cpp  ReadingTrackerApp.rc  ReadingTrackerApp.vcxproj  ReadingTrackerApp.vcxproj.filters  Resource.h
ReadingTrackerApplication/: ReadingTrackerApplication.sln
ReadingTrackerApplication/ReadingTrackerApplication/: ReadingTrackerApplication.cpp  ReadingTrackerApplication.vcxproj  ReadingTrackerApplication.vcxproj.filters
dndEncounterCalculator/: CMakeLists.txt  README.txt
dndEncounterCalculator/dndEncounterCalculator/: CMakeLists.txt  calculate.cpp  calculate.h  dndEncounterCalculator.cpp  dndEncounterCalculator.h  monsterInfo.cpp  monsterInfo.h  playerInfo.cpp  playerInfo.h
